.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/aa_Client_Job_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>aa_Client_Job_Reference_Number__c</fullName>
    <label>Client Job Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>