.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/AA_Fee_for_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>AA_Fee_for_Service_Type__c</fullName>
    <label>Fee for Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>