.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/AA_Sector__c.field-meta.xml
<CustomField>
    <fullName>AA_Sector__c</fullName>
    <label>AA Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rural &amp; Remote</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Health &amp; Hospo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>