.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Accommodation_fee_comments__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_fee_comments__c</fullName>
    <label>Accommodation Fee Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>