.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Accommodation_on_site_OR_off_site__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_on_site_OR_off_site__c</fullName>
    <label>Accommodation on site OR off site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On site</fullName>
            </value>
            <value>
                <fullName>Off site (Distance from the facility in km?)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>