.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Accommodation_provided_for_placement__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_provided_for_placement__c</fullName>
    <label>Accommodation provided for placement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>