.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Accommodation_shared_in_any_way__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_shared_in_any_way__c</fullName>
    <label>Accommodation shared in any way?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - please specify (eg: shared common areas, etc.)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>