.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Accomodation_Details__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Details__c</fullName>
    <inlineHelpText>Is accommodation included in the placement fee?</inlineHelpText>
    <label>Accommodation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>