.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Additional_requirement__c.field-meta.xml
<CustomField>
    <fullName>Additional_requirement__c</fullName>
    <inlineHelpText>Will linen be provided?</inlineHelpText>
    <label>Additional requirement?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>