.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Car_hire_covered__c.field-meta.xml
<CustomField>
    <fullName>Car_hire_covered__c</fullName>
    <label>Car hire covered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>