.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Contract_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee_Type__c</fullName>
    <description>CRS-729</description>
    <label>Contract Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Fee_Type</valueSetName>
    </valueSet>
</CustomField>