.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Valid e-mail address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>