.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Enroute_accommodation_details__c.field-meta.xml
<CustomField>
    <fullName>Enroute_accommodation_details__c</fullName>
    <inlineHelpText>eg: capped amount</inlineHelpText>
    <label>Enroute accommodation details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>