.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Enroute_accommodation_provided__c.field-meta.xml
<CustomField>
    <fullName>Enroute_accommodation_provided__c</fullName>
    <label>Enroute accommodation provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>