.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Est_accomodation_allowance__c.field-meta.xml
<CustomField>
    <fullName>Est_accomodation_allowance__c</fullName>
    <label>Est. Accommodation Allowance</label>
    <type>TextArea</type>
</CustomField>