.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Est_Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Est_Travel_Allowance__c</fullName>
    <label>Est, Travel Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All covered</fullName>
            </value>
            <value>
                <fullName>Open to negotiate</fullName>
            </value>
            <value>
                <fullName>Certain amount</fullName>
            </value>
            <value>
                <fullName>One way only</fullName>
            </value>
            <value>
                <fullName>Return trip</fullName>
            </value>
            <value>
                <fullName>Capped total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>