.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Est_Travel_Allowance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Est_Travel_Allowance_Comments__c</fullName>
    <label>Est. Travel Allowance Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>