.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Free_of_charge_OR_a_cost_required__c.field-meta.xml
<CustomField>
    <fullName>Free_of_charge_OR_a_cost_required__c</fullName>
    <label>Free of charge OR a cost required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free of charge</fullName>
            </value>
            <value>
                <fullName>Cost required (please specify how much?)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>