.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>Full Name of Travel Contact</inlineHelpText>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>