.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Induction_Session__c.field-meta.xml
<CustomField>
    <fullName>Induction_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Induction Session</label>
    <referenceTo>b3o__Session__c</referenceTo>
    <relationshipLabel>Jobs (Induction Session)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>