.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Interview_Session__c.field-meta.xml
<CustomField>
    <fullName>Interview_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Session</label>
    <referenceTo>b3o__Session__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>