.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Job_contract_reference__c.field-meta.xml
<CustomField>
    <fullName>Job_contract_reference__c</fullName>
    <label>Job/contract reference</label>
    <type>TextArea</type>
</CustomField>