.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Application_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipLabel>Jobs (Application Form)</relationshipLabel>
    <relationshipName>Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>