.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Apply_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Apply_Button_Text__c</fullName>
    <defaultValue>&quot;Apply Now&quot;</defaultValue>
    <label>Apply Button Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>