.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Assigned_Job_Board__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Assigned_Job_Board__c</fullName>
    <label>Assigned Job Board</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InternalJobBoard</fullName>
                <default>true</default>
                <label>InternalJobBoard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>