.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Date_Job_Posted__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Date_Job_Posted__c</fullName>
    <label>Date Job Posted</label>
    <type>Date</type>
</CustomField>