.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Document_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Pack</label>
    <referenceTo>b3o__Document_Pack__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>