.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full_Time</fullName>
                <label>Full Time</label>
            </value>
            <value>
                <fullName>part_time</fullName>
                <label>Part Time</label>
            </value>
            <value>
                <fullName>Contract/Temp</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Site 1</fullName>
                <isActive>false</isActive>
                <label>Site 1</label>
            </value>
            <value>
                <fullName>Site 2</fullName>
                <isActive>false</isActive>
                <label>Site 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>