.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_End_Date__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>