.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Featured_Job__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Featured_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured Job</label>
    <type>Checkbox</type>
</CustomField>