.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Job_Description__c</fullName>
    <label>Job Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>