.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Job_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Job_Expiry_Date__c</fullName>
    <label>Job Expiry Date</label>
    <type>DateTime</type>
</CustomField>