.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Job_Footer__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Job_Footer__c</fullName>
    <label>Job Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>