.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Job_Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>