.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Location__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>