.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Logo__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>