.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Quick_Apply_Form__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Quick_Apply_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quick Apply Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipLabel>Jobs (Quick Apply Form)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>