.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Registration_Form__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Registration_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>