.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Salary__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Salary__c</fullName>
    <label>Salary</label>
    <length>20</length>
    <type>Text</type>
</CustomField>