.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>