.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/JobBoard_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>JobBoard_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>