.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/On_Off_site_comments__c.field-meta.xml
<CustomField>
    <fullName>On_Off_site_comments__c</fullName>
    <label>On/Off site comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>