.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>TextArea</type>
</CustomField>