.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Preferred_method_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_method_of_travel__c</fullName>
    <label>Preferred method of travel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>