.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General_clinical</fullName>
                <label>General - Clinical</label>
            </value>
            <value>
                <fullName>Non-clinical</fullName>
            </value>
            <value>
                <fullName>Rural Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>