.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Return_departure_date__c.field-meta.xml
<CustomField>
    <fullName>Return_departure_date__c</fullName>
    <inlineHelpText>Return departure date</inlineHelpText>
    <label>Return departure date</label>
    <type>Date</type>
</CustomField>