.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Shared_accommodation_comments__c.field-meta.xml
<CustomField>
    <fullName>Shared_accommodation_comments__c</fullName>
    <label>Shared accommodation comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>