.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Jobs (Site)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>