.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>Site__r.Name</formula>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>