.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>