.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Travel_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Travel_Contact_Details__c</fullName>
    <inlineHelpText>Are you the best person to contact for travel details?</inlineHelpText>
    <label>Travel Contact Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>