.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Travel_From__c.field-meta.xml
<CustomField>
    <fullName>Travel_From__c</fullName>
    <inlineHelpText>Where are you travelling from?</inlineHelpText>
    <label>Travel From</label>
    <type>TextArea</type>
</CustomField>