.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <label>Travel Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>