.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>Type_Icon__c</fullName>
    <formula>IF( RecordType.Name = &quot;Permanent&quot;,
IMAGE(&quot;/resource/1724353752000/Permanent_Icon?&quot;,
&quot;Permanent_Placement&quot;, 30, 120)
,
IF( RecordType.Name = &quot;Consulting&quot;,IMAGE(&quot;/resource/1724353238000/Pool_Icon?&quot;,
&quot;Pool_Job&quot;, 30, 120)
,IMAGE(&quot;resource/1724353238000/Pool_Icon?&quot;,
&quot;Pool_Role&quot;, 30, 120)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>