.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/What_would_be_your_after_hour_contact__c.field-meta.xml
<CustomField>
    <fullName>What_would_be_your_after_hour_contact__c</fullName>
    <inlineHelpText>where to collect the keys, etc.</inlineHelpText>
    <label>What would be your after hour contact?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>