.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/X3B_JobboardSite__c.field-meta.xml
<CustomField>
    <fullName>X3B_JobboardSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Site</label>
    <referenceTo>b3o__Site__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>