.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/fields/X3BJobBoard_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>X3BJobBoard_Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Job Type</label>
    <referenceTo>b3o__Job_Type__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>