.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Job for a Contract Placement</description>
    <label>Contract</label>
</RecordType>