.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/recordTypes/Fee_for_Service.recordType-meta.xml
<RecordType>
    <fullName>Fee_for_Service</fullName>
    <active>true</active>
    <description>Used for payroll service fee job types</description>
    <label>Fee for Service</label>
</RecordType>