.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/listViews/Candidate_Pools.listView-meta.xml
<ListView>
    <fullName>Candidate_Pools</fullName>
    <columns>NAME</columns>
    <columns>TR1__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TR1__Account__c</columns>
    <columns>TR1__City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TR1__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TR1__Job__c.TR1__Consulting</value>
    </filters>
    <label>Sourcing Pools</label>
</ListView>