.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/listViews/My_Contract_Jobs.listView-meta.xml
<ListView>
    <fullName>My_Contract_Jobs</fullName>
    <columns>NAME</columns>
    <columns>TR1__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TR1__Account__c</columns>
    <columns>TR1__City__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TR1__Job__c.Contract</value>
    </filters>
    <label>My Contract Jobs</label>
</ListView>