.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/listViews/My_Open_Jobs.listView-meta.xml
<ListView>
    <fullName>My_Open_Jobs</fullName>
    <columns>NAME</columns>
    <columns>TR1__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TR1__Account__c</columns>
    <columns>TR1__City__c</columns>
    <columns>TR1__Contact__c</columns>
    <columns>TR1__Days_Open__c</columns>
    <columns>TR1__Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TR1__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Interview_Session__c</field>
        <operation>contains</operation>
        <value>QLD</value>
    </filters>
    <label>My Open Jobs</label>
</ListView>