.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/listViews/Open_Jobs_Internal_Job_Board.listView-meta.xml
<ListView>
    <fullName>Open_Jobs_Internal_Job_Board</fullName>
    <columns>NAME</columns>
    <columns>AA_Sector__c</columns>
    <columns>TR1__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TR1__Account__c</columns>
    <columns>JobBoard_Job_Expiry_Date__c</columns>
    <columns>JobBoard_Job_Title__c</columns>
    <columns>JobBoard_Date_Job_Posted__c</columns>
    <columns>TR1__City__c</columns>
    <columns>TR1__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JobBoard_Assigned_Job_Board__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Internal Job Board - Open Jobs</label>
</ListView>