.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Job__c/listViews/Syd_Jobs.listView-meta.xml
<ListView>
    <fullName>Syd_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Interview_Session__c</columns>
    <columns>Induction_Session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>contains</operation>
        <value>BR-0001</value>
    </filters>
    <label>Syd Jobs</label>
</ListView>